# sam-lab-ui

./: CMakeLists.txt  CMakeLists_old.txt  README.md
backend/: HttpServer.cpp  HttpServer.hpp  MotorController.cpp  MotorController.hpp  SerialPort.cpp  SerialPort.hpp  main.cpp
backend/header_files/: HttpServer_old.hpp  MotorController_old.hpp  SerialPort_old.hpp
backend/source_files/: HttpServer_old.cpp  MotorController_old.cpp  SerialPort_old.cpp  main_old.cpp
firmware/MotorControlNine/: MotorControlNine.ino
firmware/MotorControlOne/: MotorControlOne.ino
public/: index.html  index_1_motor.html
